--- a/style/style.css
+++ b/style/style.css
@@ -80,6 +80,7 @@
 .box-1 {
   width: 386px;
   height: 383px;
+  background-color: #f4f4f4;
 }
 .box-2 {
   width: 300px;
@@ -133,6 +134,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #40ddb6;
+}
+.icon1 {
+  width: 72px;
+  height: 72px;
+  background-color: #40ddb6;
+  border-radius: 100px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #6b77e5;
 }
 
 .sec-img {
